add search animation motion layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="title_profile">Perfil</string>
     <string name="email">Email</string>
     <string name="password">Senha</string>
+    <string name="search">Pesquisar projeto</string>
     <string name="enter">ENTRAR</string>
     <string name="text_go">Go!</string>
     <string name="search_title">Procurando por uma empresa de desenvolvimento? \nparabéns você acabou de encontrar a
